working example after azure cloud test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Database connection properties
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/bmiDB
-spring.datasource.username=root
-spring.datasource.password=08thomas1995
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:mysql://localhost:3306/bmiDB
+#spring.datasource.username=root
+#spring.datasource.password=08thomas1995
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.show-sql: true
 
-server.port=8082
+#server.port=8082
